[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hwbench"
authors = [{name = "Erwan Velu", email = "e.velu@criteo.com"}, {name = "Anisse Astier", email = "a.astier@criteo.com"}, {name = "Aurélien Rougemont", email="a.rougemont@criteo.com"}]
description = "hwbench is a benchmark orchestrator to automate the low-level testing of servers"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cachetools",
  "redfish",
  "packaging"
]

[project.urls]
Home = "https://github.com/criteo/hwbench"

[project.scripts]
hwbench = "hwbench.hwbench:main"
hwgraph = "graph.hwgraph:main"

[tool.hatch.build]
packages = ["hwbench", "graph"]

[dependency-groups]
dev = [
    "cachetools>=4.2.4",
    "mypy",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "types-cachetools>=5.5.0.20240820",
    "uv>=0.4.27"
]

[project.optional-dependencies]
graph = [
  "numpy",
  "matplotlib>3.5.0",
  "pillow>=11.0.0",
  "pycairo",
]

[tool.ruff]
target-version = 'py311'
line-length = 120
